python/testData/highlighting/oneTypeParameterConstraintReported.py
class ClassD[T: (<error descr="Two or more types required">str,</error> )]: ...